--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
-    <title>Project JavaScript Calculator Console</title>
+    <title>Project JavaScript shape Console</title>
   </head>
   <body>
-    <h1>Project JavaScript Calculator Console</h1>
+    <h1>Project JavaScript shape Console</h1>
 
     <script src="index.js"></script>
   </body>
